--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
     <title>React App</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet" /> -->
     <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
 </head>
 
