--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="root"></div>
     <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
-    <script src="%PUBLIC_URL%/js/custom.js" type="text/javascript"></script>
+    <!-- <script src="%PUBLIC_URL%/js/custom.js" type="text/javascript"></script> -->
 </body>
 
 </html>
