--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-    <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js" type="text/javascript"></script> -->
+    <!-- <script src="%PUBLIC_URL%/js/jquery.min.js"></script> -->
     <!-- <script src="%PUBLIC_URL%/js/custom.js" type="text/javascript"></script> -->
 </body>
 
